// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible [common] example testing should match snapshot(s) for 1.toggle-expand 1`] = `
<Motion
  style={
    Object {
      "height": 0,
    }
  }
>
  <Component />
</Motion>
`;

exports[`Collapsible [common] example testing should match snapshot(s) for 2.not-animated 1`] = `
<Motion
  style={
    Object {
      "height": 0,
    }
  }
>
  <Component />
</Motion>
`;

exports[`Collapsible [common] example testing should match snapshot(s) for 3.unmount-children-on-collapse 1`] = `
<Motion
  style={
    Object {
      "height": 0,
    }
  }
>
  <Component />
</Motion>
`;

exports[`Collapsible [common] example testing should match snapshot(s) for 4.render-children-on-collapse 1`] = `
<Motion
  style={
    Object {
      "height": 0,
    }
  }
>
  <Component />
</Motion>
`;

exports[`Collapsible [common] example testing should match snapshot(s) for 5.toggle-with-onRest-callback 1`] = `
<Motion
  onRest={[Function]}
  style={
    Object {
      "height": 0,
    }
  }
>
  <Component />
</Motion>
`;
